Sun May 27 15:57:17 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added invite list, ban list, some key management and connection
	  error message printing to module formats in the Irssi SILC client.

Sun May 27 12:39:48 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the private message sending in the Irssi SILC client,
	  added local command KEY to the Irssi SILC client.

	  Added key management and key agreement message formats to the
	  irssi/src/fe-common/silc/module-formats.[ch].

	  Added USERS (alias WHO) printing, server/router operator
	  indication and LIST command printing to the module formats.

Sat May 26 17:43:42 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed channel joining notify handling, cumode notify handling
	  from Irssi SILC client.

	* Added SILC specific module-formats to the Irssi SILC client so
	  that SILC specific message hilighting, colors etc is possible.
	  Affected file irssi/src/fe-common/silc/module-formats.[ch].

	  Added channel mode, channel user mode, actions, notices,
	  whois and whowas printing to the the module-formats.c.

	* Fixed a bug in channel deletion in the server.  The channel
	  is not left to the cache even if the channel founder auth mode
	  is set when there are no users anymore on the channel.  Affected
	  file silcd/server.c.

	* The silc_net_localhost now resolves the entire hostname including
	  the domain name.  Affected file lib/silcutil/silcnet.c.

Sat May 26 12:13:37 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Changed the ask_passphrase client operation to be ascynchronous.
	  It has now a completion callback and a context that the 
	  application must call after it has got the passphrase from
	  the user.  Affected files lib/silcclient/silcapi.h,
	  lib/silcclient/protocol.c, lib/silcclient/command.c and
	  silc/client_ops.c.

	  Added SilcAskPassphrase callback that the application calls
	  to deliver the passphrase to the library.
